Closed
Bug 1666356
Opened 2 years ago
Closed 2 years ago
Add checkboxes to VoiceOver Rotor
Categories
(Core :: Disability Access APIs, defect, P1)
Tracking
()
VERIFIED
FIXED
83 Branch
Tracking | Status | |
---|---|---|
firefox83 | --- | verified |
People
(Reporter: morgan, Assigned: morgan)
References
Details
Attachments
(1 file)
STR:
- Lauch VO on
data:text/html,<input type="checkbox">Hello
- VO+U to checkbox rotor
Expected:
VO lists the checkbox
Actual:
nothing
Assignee | ||
Comment 1•2 years ago
|
||
Pushed by mreschenberg@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/f01adb0a0e05 Add support for AXCheckboxSearchKey to VO rotor r=eeejay
Comment 3•2 years ago
|
||
Backed out for causing conflict on backout.
See https://bugzilla.mozilla.org/show_bug.cgi?id=1665962#c3.
Pushed by mreschenberg@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/6ade89a5867f Add support for AXCheckboxSearchKey to VO rotor r=eeejay
![]() |
||
Comment 5•2 years ago
|
||
bugherder |
Status: NEW → RESOLVED
Closed: 2 years ago
status-firefox83:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch
Updated•2 years ago
|
Flags: qe-verify+
I was able to reproduce this bug using the steps from comment 0, an an affected Nightly build 82.0a1 (2020-09-14).
The bug is verified as fixed on latest Beta 83.0b3, under macOS 10.15.
You need to log in
before you can comment on or make changes to this bug.
Description
•