Bug 1666356: Add support for AXCheckboxSearchKey to VO rotor r=eeejay

Differential Revision: https://phabricator.services.mozilla.com/D91169